Add signer and identity properties and better integration support